feat: adicionado novo endpoint e modificando DTOS